completed mongodb staerted
added config files to  connect with the cloud mongodb for now i created a user enrique to give access in cloud to only one Databse to protect provacy and now i will start with the option 1 which is inserting weather